manifest/02-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: meeting-system
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gk123a/meeting-management-frontend:v1.0.0-dev
          imagePullPolicy: IfNotPresent # Hoặc Always
          ports:
            - containerPort: 80 # Nginx mặc định port 80
          
          # Mount ConfigMap vào file
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
          
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: config-volume
          configMap:
            name: frontend-config
